# random

./: .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements_lock.txt
projects/: cat_sound_finder.py  orf_finderpy.py  photobooth_download.py  tag_these_scenarios.csv  tessie_reader.py  testing.py
projects/backup_analyzer/: backup_analyzer.py  backup_organizer.py  check_duplicate_targets.py  remove_files.py
projects/cat_identifier/: detector.py
projects/cli/: cli_run.py  data.csv  person.proto  person_pb2.py
projects/click_custom_proto_parser/: BUILD  joey.proto  joey_pb2.py  proto_cli_parser.py
projects/file_search/: file_search.py
projects/metadata_updater/: reverse_order.py  updater.py
projects/photo_resizer/: resize.py
projects/scenario_tag_bulk_cli/: BUILD  scenario_tagging.py  scenario_tags.proto  scenario_tags_pb2.py
